--- a/app/src/main/res/layout/fragment_home_mine.xml
+++ b/app/src/main/res/layout/fragment_home_mine.xml
@@ -54,6 +54,10 @@
         android:gravity="center"
         android:maxLength="12"
         android:maxLines="1"
+        android:shadowColor="@color/color_black"
+        android:shadowDx="1.0"
+        android:shadowDy="1.0"
+        android:shadowRadius="2.0"
         android:singleLine="true"
         android:text="@string/Tap3_LogIn"
         android:textColor="@color/color_white"
