--- a/app/src/main/res/layout/fragment_mine_look_big_image.xml
+++ b/app/src/main/res/layout/fragment_mine_look_big_image.xml
@@ -1,16 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/color_black"
-    android:clickable="true"
-    android:orientation="vertical">
+<layout>
 
-    <ImageView
-        android:id="@+id/iv_look_big_image"
+    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:scaleType="centerCrop" />
+        android:layout_height="match_parent"
+        android:background="@color/color_black"
+        android:clickable="true"
+        android:focusable="true">
 
-</RelativeLayout>
+        <ImageView
+            android:id="@+id/big_picture"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:scaleType="centerCrop"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintDimensionRatio="1:1"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+    </android.support.constraint.ConstraintLayout>
+</layout>
