--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -45,6 +45,8 @@
     <color name="color_4b9fd5">#4B9FD5</color>
     <color name="color_cecece">#CECECE</color>
     <color name="color_0ba8cf">#0BA8CF</color>
+    <color name="color_17AFD1">#17AFD1</color>
+    <color name="color_263954">#263954</color>
     <color name="color_f6f9fa">#F6F9FA</color>
     <color name="color_f4f4f4">#F4F4F4</color>
     <color name="color_36BDFF">#36BDFF</color>
